# python-package-test

./: setup.cfg
src/formatmyname/: format_name.py
src/formatmyname.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
