[metadata]
name = formatmyname
description = Format my name
author = Brandon Michael
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = formatmyname
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

